k8s/development/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: genesis-development
  name: genesis-api
  labels:
    app: genesis-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: genesis-api
  template:
    metadata:
      labels:
        app: genesis-api
    spec:
      containers:  
      - name: genesis-api
        image: sa-saopaulo-1.ocir.io/grj9gtpq5dke/genesis-api:${CI_COMMIT_BRANCH}-${CI_PIPELINE_ID}
        ports:
        - containerPort: 8100
      imagePullSecrets:
      - name: oc-integrada
