k8s/development/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: genesis-development
  name: genesis-ingress-api
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
  - hosts:
    - genesis-desenv.integrada.coop.br
    secretName: integrada-23
  rules:
  - host: genesis-desenv.integrada.coop.br
    http:
      paths:
      - pathType: Prefix
        path: /api/pa/v1/
        backend:
          service:
            name: genesis-api
            port:
              number: 8100
      - pathType: Prefix
        path: /swagger-pa-portal
        backend:
          service:
            name: genesis-api
            port:
              number: 8100
